mobile/mobile.scss
@import "common/foundation/variables";

$bar-height: 49px;

$bar-height-10: $bar-height + 10;

html:not(.anon) {
  #topic-progress-wrapper:not(.docked) {
    bottom: $bar-height;
  }

  #topic-progress-wrapper.docked {
    margin-bottom: $bar-height-10 * -1;
  }

  #main-outlet {
    margin-bottom: $bar-height-10;
  }

  #reply-control.draft {
    margin-bottom: env(safe-area-inset-bottom);
    padding-bottom: 0px;
    transition: all 0.1s ease-out;
    bottom: $bar-height;
  }

  .posts-filtered-notice {
    transition: all 0.1s ease-out;
    bottom: $bar-height;
  }
}

body.tab-bar-hidden {
  .d-tab-bar {
    bottom: $bar-height * -1;
    transition: all 0.2s ease-in;
  }

  #topic-progress-wrapper:not(.docked) {
    bottom: 0;
    transition: all 0.2s ease-in;
  }

  #reply-control.draft {
    margin-bottom: env(safe-area-inset-bottom);
    bottom: 0;
    padding-bottom: 0px;
    transition: all 0.2s ease-in;
  }

  .posts-filtered-notice {
    transition: all 0.2s ease-in;
    bottom: 0;
  }
}

.d-tab-bar {
  background-color: var(--header_background);
  transition: all 0.1s ease-out;
  width: 100%;
  height: $bar-height;
  position: fixed;
  bottom: 0;
  z-index: z("dropdown") - 1;
  box-shadow: 0px -2px 4px -1px rgba(0, 0, 0, 0.25);
  padding-bottom: env(
    safe-area-inset-bottom
  ); // for devices with a notch (iPhone X*)

  .tab {
    color: var(--primary-medium);
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    float: left;

    &.active {
      color: var(--tertiary);
    }

    p.title {
      margin: 0;
      font-size: 0.7em;
    }

    .fa {
      font-size: #{$icons-size}em;
    }
  }
}

body:not(.footer-nav-ipad) .footer-nav {
  display: none;
}

